@@ -32,6 +32,7 @@
 * Added startproject() to specify solution startup project
 * Added ExcludeFromBuild flag to mark source files as non-buildable
 * Added MultiProcessorCompile flag to run multiple compiler processes
+* Fixed assembly references for Visual Studio Managed C++ projects
 
 
 -------
